test of stdout redirect